# Olive-Assignment

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: Dockerfile  next.config.mjs  package.json  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chat/: route.ts
apps/web/src/app/api/sessions/: route.ts
apps/web/src/app/api/sessions/[id]/: route.ts
apps/web/src/app/api/settings/: route.ts
apps/web/src/app/api/users/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/lib/: context-window.ts  ingestion.ts  observe.ts  providers.ts  runtime-config.ts  store.ts
infra/config/: .gitignore
infra/docker/: docker-compose.yml
infra/k8s/chart/: Chart.yaml  values.yaml
infra/k8s/chart/templates/: _helpers.tpl  ingestion.yaml  migrate-job.yaml  postgres.yaml  redis.yaml  refresh-view-cron.yaml  web.yaml  worker.yaml
infra/litellm/: config.yaml
services/ingestion/: Dockerfile  alembic.ini  pyproject.toml
services/ingestion/api/: analytics.py  chat_store.py  db.py  main.py  settings.py
services/ingestion/migrations/: env.py
services/ingestion/migrations/versions/: 0001_initial_schema.py  0002_hourly_view.py  0003_users_table.py
services/ingestion/tests/: test_ingest_endpoint.py  test_redact.py  test_worker.py
services/ingestion/workers/: consumer.py  redact.py
