[project]
name = "ingestion"
version = "0.1.0"
description = "FastAPI ingestion service for llm-observe telemetry."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis[hiredis]>=5.0",
    "shared-schema",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Presidio + spaCy add ~500MB. Tests use only the regex layer by default;
# Presidio is exercised via a mock. Real worker deploys include this extra.
nlp = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
dev = [
    "fakeredis>=2.23",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "workers"]

[tool.uv.sources]
shared-schema = { workspace = true }
